[gd_scene load_steps=13 format=4 uid="uid://cdlliniui3qrc"]

[ext_resource type="Script" uid="uid://bprpuj6g5oy0p" path="res://scripts/banff/obstacle_skiing.gd" id="1_1kadr"]
[ext_resource type="Texture2D" uid="uid://dgyjhtgq5aiu1" path="res://assets/rocks/log 1.png" id="2_erwt3"]
[ext_resource type="Texture2D" uid="uid://bsu52r4fftcby" path="res://assets/rocks/rock 1.png" id="3_rr728"]
[ext_resource type="Texture2D" uid="uid://bx42em4hxf352" path="res://assets/rocks/Tree.png" id="4_erwt3"]
[ext_resource type="Texture2D" uid="uid://df1bq2xh5gf7u" path="res://assets/tiles/snow/1.png" id="5_rcjw1"]
[ext_resource type="Texture2D" uid="uid://5w0r1mld61yr" path="res://assets/tiles/snow/2.png" id="6_flaxh"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rcjw1"]
radius = 13.0
height = 54.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1kadr"]
radius = 6.0
height = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_erwt3"]
radius = 42.72

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7oiol"]
texture = ExtResource("5_rcjw1")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_cyooy"]
texture = ExtResource("6_flaxh")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_jipw8"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_7oiol")
sources/1 = SubResource("TileSetAtlasSource_cyooy")

[node name="ObstacleSkiing" type="StaticBody2D"]
z_index = 10
collision_layer = 2
collision_mask = 2
script = ExtResource("1_1kadr")

[node name="Log" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_erwt3")
region_enabled = true
region_rect = Rect2(29, 33, 11, 26)

[node name="Rock" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_rr728")
region_enabled = true
region_rect = Rect2(26, 44, 29, 16)

[node name="Tree" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_erwt3")

[node name="TreeArea2D" type="Area2D" parent="."]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="TreeArea2D"]
position = Vector2(0, 5)
shape = SubResource("CapsuleShape2D_rcjw1")

[node name="LogRockArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LogRockArea2D"]
scale = Vector2(0.84, 0.29)
shape = SubResource("CapsuleShape2D_rcjw1")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
visible = false
position = Vector2(2, 18)
scale = Vector2(119.4, 79.025)

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_1kadr")

[node name="NearbyObstacels" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="NearbyObstacels"]
shape = SubResource("CircleShape2D_erwt3")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
visible = false
z_index = -100
tile_map_data = PackedByteArray("AAAAAAAAAQAAAAAAAAAAAP//AAAAAAAAAAD/////AAAAAAAAAAD//wAAAAAAAAAAAAD6////AAAAAAAAAAD6/wAAAQAAAAAAAAD7////AAAAAAAAAAD7/wAAAAAAAAAAAAD8////AAAAAAAAAAD8/wAAAAAAAAAAAAD9////AAAAAAAAAAD9/wAAAAAAAAAAAAD+////AAAAAAAAAAD+/wAAAAAAAAAAAAABAP//AAAAAAAAAAABAAAAAAAAAAAAAAACAAAAAAAAAAAAAAADAAAAAAAAAAAAAAAEAP//AAAAAAAAAAAEAAAAAAAAAAAAAAAFAP//AAAAAAAAAAAFAAAAAAAAAAAAAAACAP//AAAAAAAAAAADAP//AAAAAAAAAAAGAP//AAAAAAAAAAAGAAAAAAAAAAAAAAD5////AAAAAAAAAAD5/wAAAAAAAAAAAAD3////AAAAAAAAAAD3/wAAAAAAAAAAAAD4////AAAAAAAAAAD4/wAAAAAAAAAAAAAHAP//AAAAAAAAAAAHAAAAAAAAAAAAAAAIAP//AAAAAAAAAAAIAAAAAAAAAAAAAAAJAP//AAAAAAAAAAAJAAAAAAAAAAAAAAAKAP//AAAAAAAAAAAKAAAAAAAAAAAAAAD1////AAAAAAAAAAD1/wAAAAAAAAAAAAD2////AAAAAAAAAAD2/wAAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_jipw8")

[connection signal="body_entered" from="TreeArea2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="LogRockArea2D" to="." method="_on_area_2d_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
